Correcting horizontal scroll on mobile devices.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
@@ -56,7 +57,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  max-width: 100vw;
+  max-width: 100svw;
   overflow-x: hidden;
   min-height: 100vh;
   user-select: none;
